Enable access to javax.activation package on Java9 when TLC launched from Toolbox.
[Bug][Toolbox]